<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;

class CourrierType extends Model
{
    protected $fillable = [
        'libelle',
    ];
}
